# Project_10_2

./: pyproject.toml
src/: calculate.py
tests/: conftest.py  test_calculate.py
